[package]
name = "derisk_stellar_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "serde_json"] }
ingest = "0.0.3"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stellar-xdr = { version = "20.0.0-rc1", features = [
  "std",
  "curr",
  "next",
  "base64",
  "serde",
] }


[lib]
name = "derisk_stellar_events"
path = "src/lib.rs"

[[bin]]
name = "historic_events"
path = "src/bin/fetch_and_store_historic_events.rs"

[[bin]]
name = "stream_events"
path = "src/bin/stream_events.rs"

[[bin]]
name = "pool_data"
path = "src/bin/pool_data.rs"
